--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="excell" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\excell1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8-buying-40" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-buying-40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="editdelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\editdelete1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -160,8 +163,14 @@
   <data name="login-27" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login-271.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="muhasebe.png_48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\muhasebe.png_48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="FileSeek1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FileSeek11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8-buying-40-ios" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-buying-40-ios.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="shop-cart-apply-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shop-cart-apply-icon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,7 +181,7 @@
   <data name="tab_new1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tab_new1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="muhasebe.png_48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\muhasebe.png_48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-responsive-40" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-responsive-40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
